tests/ui/enum_derive/ty_impls.stderr
error: `enum_derive(Transpose)` all fields need to be generics
  --> $DIR/ty_impls.rs:6:1
   |
6  | / enum Enum1<A, B> {
7  | |     //~^ ERROR `enum_derive(Transpose)` all fields need to be generics
8  | |     A(Foo<A>),
9  | |     B(B),
10 | | }
   | |_^
